[gd_scene load_steps=6 format=2]

[ext_resource path="res://components/battle/BattleManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://components/ambience/forest-background.tscn" type="PackedScene" id=2]
[ext_resource path="res://components/ambience/wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://game_script/battle/GameScene.gd" type="Script" id=4]
[ext_resource path="res://components/UI/UIControl.tscn" type="PackedScene" id=5]

[node name="GameScene" type="Node"]
script = ExtResource( 4 )

[node name="UIControl" parent="." instance=ExtResource( 5 )]

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 640, 360 )
handle_input_locally = false
render_target_update_mode = 3

[node name="wall" parent="ViewportContainer/Viewport" instance=ExtResource( 3 )]

[node name="Forest BackGround" parent="ViewportContainer/Viewport" instance=ExtResource( 2 )]

[node name="BattleManager" parent="ViewportContainer/Viewport" instance=ExtResource( 1 )]

[connection signal="end_game" from="ViewportContainer/Viewport/BattleManager" to="UIControl" method="_on_End_game"]
